// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostcodeEdit should render as expected 1`] = `
<div>
  <form
    action=""
    data-qa="partnerDetailsForm"
    enctype="application/x-www-form-urlencoded"
    method="post"
  >
    <input
      name="_csrf"
      type="hidden"
      value="stub-csrf"
    />
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      />
      <div
        class="govuk-form-group"
        data-qa="field-new-partner-postcode-value"
      >
        <label
          class="govuk-label"
          for="new-partner-postcode-value"
        >
          New Postcode Label
        </label>
        <div
          class="govuk-hint"
          id="new-partner-postcode-value-hint"
        >
          New Postcode Hint
        </div>
        <input
          class="govuk-input govuk-!-width-one-quarter"
          id="new-partner-postcode-value"
          name="new-partner-postcode-value"
          type="text"
          value="SN2 1ET"
        />
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      />
      <button
        class="govuk-button govuk-!-margin-right-1"
        data-module="govuk-button"
        data-qa="button_default-qa"
        name="button_default"
        type="submit"
      >
        Save
      </button>
    </fieldset>
  </form>
</div>
`;

exports[`PostcodeEdit should render with the current postcode value when displayCurrentPostcode is true 1`] = `
<div>
  <form
    action=""
    data-qa="partnerDetailsForm"
    enctype="application/x-www-form-urlencoded"
    method="post"
  >
    <input
      name="_csrf"
      type="hidden"
      value="stub-csrf"
    />
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      />
      <div
        class="govuk-form-group"
        data-qa="field-current-partner-postcode-value"
      >
        <label
          class="govuk-label"
          for="current-partner-postcode-value"
        >
          Current Postcode Label
        </label>
        <p
          class="govuk-body"
        >
          SN2 1ET
        </p>
      </div>
      <div
        class="govuk-form-group"
        data-qa="field-new-partner-postcode-value"
      >
        <label
          class="govuk-label"
          for="new-partner-postcode-value"
        >
          New Postcode Label
        </label>
        <div
          class="govuk-hint"
          id="new-partner-postcode-value-hint"
        >
          New Postcode Hint
        </div>
        <input
          class="govuk-input govuk-!-width-one-quarter"
          id="new-partner-postcode-value"
          name="new-partner-postcode-value"
          type="text"
          value="SN2 1ET"
        />
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      />
      <button
        class="govuk-button govuk-!-margin-right-1"
        data-module="govuk-button"
        data-qa="button_default-qa"
        name="button_default"
        type="submit"
      >
        Save
      </button>
    </fieldset>
  </form>
</div>
`;
